--- a/blog-client/admin/create-post.html
+++ b/blog-client/admin/create-post.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <form id="createPost">
+        <label for="title">Title</label><br>
+        <input type="text"><br><br>
+        <label for="author">Author</label><br>
+        <input type="text"><br><br>
+        <textarea>Content</textarea><br><br>
+        <select multiple="">
+        <option value="food">Food</option>
+        <option value="travel">Travel</option>
+        <option value="sports">Sports</option>
+        <option value="Economics">Sports</option>
+        </select><br><br>
+        <button type="submit">create</button><br><br>
+        <a href="#">back</a>
+    </form>
     <script src="js/create-post.js"></script>
 </body>
 </html>
