--- a/blog-client/index.html
+++ b/blog-client/index.html
@@ -2,10 +2,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog client</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
+    <a href="./admin/index.html" id="admin-button" class="button">Admin</a>
+    <h1>Our blog</h1>
+    <h2>Blog posts</h2>
+    <div id="container">
+        <article id="posts"></article>
+    </div>
     <script src="js/posts.js"></script>
 </body>
 </html>
