added code to manage-post.js and create-post.js

--- a/blog-client/admin/index.html
+++ b/blog-client/admin/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <table id = "post-table"></table>
     <script src="js/manage-posts.js"></script>
 </body>
 </html>
