--- a/blog-client/admin/create-post.html
+++ b/blog-client/admin/create-post.html
@@ -13,7 +13,8 @@
         <input type="text" id="title"><br><br>
         <label for="author">Author</label><br>
         <input type="text" id="author"><br><br>
-        <textarea id="content" rows="10" cols="50">Content</textarea><br><br>
+        Content
+        <textarea id="content" rows="10" cols="50"></textarea><br><br>
         
             <fieldset>      
                 <legend>Tags</legend>      
@@ -26,7 +27,7 @@
             </fieldset>   
             <br><br>
         <button type="submit">create</button><br><br>
-        <a href="admin/index.html">&#x2190;back</a>
+        <a href="./index.html">&#x2190;back</a>
     </form>
     <script src="js/create-post.js"></script>
 </body>
