--- a/blog-client/admin/index.html
+++ b/blog-client/admin/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
 </head>
 <body>
-    <h1>Blog page</h1>
-    <h2>Blog posts</h2>
+    <h1><a href="/blog-client/index.html"> Blog page</a><hr></h1>
     
+    <h2>Handel Blog posts</h2>
     <table id = "post-table"></table>
     <a href="create-post.html" id="admin-button" class="button">Create new post</a>
     <table id="table-posts">
