--- a/blog-client/post.html
+++ b/blog-client/post.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Denna sida är för VG-nivå</h1>
+    <article id="blog-post">
+    </article>
+    <a href="index.html" class="button">Back to homepage</a>
     <script src="js/post.js"></script>
 </body>
 </html>
