--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -20,8 +20,8 @@
             <input type="text" name="author" id="author-input">
         </div>
         <div class="input">
-            <lable for="content">content</lable>
-            <textarea type="text" name="content" id="content-input" rows="10" cols="50"></textarea>
+            <lable for="content">Content</lable>
+            <textarea type="text" name="content" id="content-input" rows="15" cols="50"></textarea>
         </div>
         <fieldset>      
             <legend multiple>Tags</legend>     
