--- a/blog-client/admin/create-post.html
+++ b/blog-client/admin/create-post.html
@@ -18,11 +18,11 @@
         
             <fieldset>      
                 <legend>Tags</legend>      
-                <input type="checkbox" name="tag" value="food">Food<br>      
-                <input type="checkbox" name="tag" value="travel">Travel<br>      
-                <input type="checkbox" name="tag" value="sports">Sports<br>  
-                <input type="checkbox" name="tag" value="economics">Economics<br> 
-                <input type="checkbox" name="tag" value="art">Art<br> 
+                <input type="checkbox" name="tags" value="Food">Food<br>      
+                <input type="checkbox" name="tags" value="Travel">Travel<br>      
+                <input type="checkbox" name="tags" value="Sports">Sports<br>  
+                <input type="checkbox" name="tags" value="Economics">Economics<br> 
+                <input type="checkbox" name="tags" value="Art">Art<br> 
                 <br>            
             </fieldset>   
             <br><br>
