--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -24,7 +24,7 @@
             <textarea type="text" name="content" id="content-input" rows="15" cols="50"></textarea>
         </div>
         <fieldset>      
-            <legend multiple>Tags</legend>     
+            <legend>Tags</legend>     
                 <input class="tags" type="checkbox" name="tags" value="food">Food<br>      
                 <input class="tags" type="checkbox" name="tags" value="travel">Travel<br>      
                 <input class="tags" type="checkbox" name="tags" value="sports">Sports<br>  
