--- a/blog-client/post.html
+++ b/blog-client/post.html
@@ -9,7 +9,7 @@
     <h1>Denna sida är för VG-nivå</h1>
     <article id="blog-post">
     </article>
-    <a href="index.html" class="button">Back to homepage</a>
+    <a href="index.html" class="button">←Back</a>
     <script src="js/post.js"></script>
 </body>
 </html>
