--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/update-post.css">
 </head>
 <body>
-    <header><a href="#">Blog page</a></header>
+    <header><a href="./index.html">Blog page</a></header>
     <hr>
     <h1>Update post</h1>
     <form id="update-post-form">
