--- a/blog-client/admin/create-post.html
+++ b/blog-client/admin/create-post.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <a href="/blog-client/index.html">Blog Page</a>
+
     <form id="createPostForm">
         <label for="title">Title</label><br>
         <input type="text" id="title"><br><br>
