--- a/blog-client/admin/index.html
+++ b/blog-client/admin/index.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/manage-posts.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
 </head>
 <body>
-    <h1><a href="/blog-client/index.html"> Blog page</a><hr></h1>
-    
+    <h1><a href="/blog-client/index.html">Blog Post</a></h1>
+    <div class="container">
     <h2>Handel Blog posts</h2>
     <table id = "post-table"></table>
     <a href="create-post.html" id="admin-button" class="button">Create new post</a>
@@ -23,6 +23,7 @@
         </thead>
         <tbody id="table-posts-data"></tbody>
   </table>
+</div>
     <script src="js/manage-posts.js"></script>
 </body>
 </html>
