change update-post background

--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -15,19 +15,19 @@
     
     <form id="update-post-form">
         <div class="input">
-            <lable for="title">Title</lable>
+            <lable for="title"><strong>Title</strong></lable>
             <input type="text" name="title" id="title-input">
         </div>
         <div class="input">
-            <lable for="author">Author</lable>
+            <lable for="author"><strong>Author</strong></lable>
             <input type="text" name="author" id="author-input">
         </div>
         <div class="input">
-            <lable for="content">Content</lable>
-            <textarea type="text" name="content" id="content-input" rows="15" cols="50"></textarea>
+            <lable for="content"><strong>Content</strong></lable>
+            <textarea type="text" name="content" id="content-input" rows="10" cols="50"></textarea>
         </div>
         <fieldset id="checkbox">      
-            <legend>Tags</legend>    
+            <legend><strong>Tags</strong></legend>    
                 <input class="tags" type="checkbox" name="tags" value="food">Food<br>      
                 <input class="tags" type="checkbox" name="tags" value="travel">Travel<br>      
                 <input class="tags" type="checkbox" name="tags" value="sports">Sports<br>  
