--- a/blog-client/admin/create-post.html
+++ b/blog-client/admin/create-post.html
@@ -11,7 +11,7 @@
 
 <body>
     
-   <h4> <a href="/blog-client/index.html">Blog Page</a></h4>
+   <h4> <a href="../index.html">Blog Page</a></h4>
    <hr>
 <div id = "main-container">
     <form id="createPostForm">
