--- a/blog-client/admin/index.html
+++ b/blog-client/admin/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
 </head>
 <body>
-    <h1><a href="/blog-client/index.html">Blog Post</a></h1>
+    <h1><a href="../index.html">Blog Post</a></h1>
     <div class="container">
     <h2>Handel Blog posts</h2>
     <table id = "post-table"></table>
