--- a/blog-client/admin/index.html
+++ b/blog-client/admin/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
 </head>
 <body>
-    <h1><a href="../index.html">Blog Post</a></h1>
+    <h4><a href="../index.html">Blog Post</a></h4><hr>
     <div class="container">
     <h2>Handel Blog posts</h2>
+    <span><img src="./css/ink.png" alt=""></span>
+    <h2><a href="create-post.html" id="admin-button" class="button"> Create new post</a></h2>
     <table id = "post-table"></table>
-    <a href="create-post.html" id="admin-button" class="button">Create new post</a>
     <table id="table-posts">
         <thead>
             <tr>
