--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -13,7 +13,7 @@
     </header>
     <hr>
     <div id="update-container">
-        <form>
+        <form id="update-post-form">
             <div class="input">
                 <lable for="title" id="title-lable">Title</lable>
                 <input type="text" name="title" id="title-input">
