change link to blog-page

--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -9,7 +9,7 @@
 <body>
     <header id="header-container">
         <h1 id="page-title">Update post</h1>
-        <a href="./index.html" id="blog-page-link">Blog page</a>
+        <a href="../index.html" id="blog-page-link">Blog page</a>
     </header>
     <hr>
     <div id="update-container">
