fix prefilled tags

--- a/blog-client/admin/update-post.html
+++ b/blog-client/admin/update-post.html
@@ -28,11 +28,11 @@
             </div>
             <fieldset id="checkbox">      
                 <legend>Tags</legend>    
-                    <input class="tags" type="checkbox" name="tags" value="food">Food<br>      
-                    <input class="tags" type="checkbox" name="tags" value="travel">Travel<br>      
-                    <input class="tags" type="checkbox" name="tags" value="sports">Sports<br>  
-                    <input class="tags" type="checkbox" name="tags" value="economics">Economics<br> 
-                    <input class="tags" type="checkbox" name="tags" value="art">Art<br> 
+                    <input class="tags" type="checkbox" name="tags" value="Food">Food<br>      
+                    <input class="tags" type="checkbox" name="tags" value="Travel">Travel<br>      
+                    <input class="tags" type="checkbox" name="tags" value="Sports">Sports<br>  
+                    <input class="tags" type="checkbox" name="tags" value="Economics">Economics<br> 
+                    <input class="tags" type="checkbox" name="tags" value="Art">Art<br> 
                 <br>            
             </fieldset>   
             <br><br>
